# fintech-group-work

./: .gitignore  CLAUDE.md  README.md  draft.tex
BusinessCase1/: .gitignore  AdditionalContentPoliMI.ipynb  Analysis.ipynb  Clustering_Alberto.ipynb  Dimensionality_Reduction_BankClients.ipynb  Dimensionality_Reduction_simo.ipynb  EDA_BankClients.ipynb  EDA_BankClients_simo.ipynb  README.md  Updating_PersonasPoliMI.ipynb  clustering.ipynb  clustering_umap.ipynb  clustering_weighted.ipynb  comparison.ipynb  create_eda_notebook.py  distance.py  economic_value.ipynb  economic_value_lvq.ipynb  economic_value_v2.ipynb  error.txt  main.py  pyproject.toml  requirements.txt
BusinessCase1/Data/: BankClients_Metadata.xlsx  Dataset1_BankClients.xlsx  ~$Dataset1_BankClients.xlsx
BusinessCase1/marimo/: README.md  bank_clients_analysis.py  precompute.py
BusinessCase1/report/: Strategia_Marketing_Report_V2.md  cluster_marketing_strategy_report.md  revenue_stream_methodology.md
BusinessCase1/results/: board_ready_export.xlsx  cluster_revenue_ranking.xlsx  cluster_revenue_ranking_v2.xlsx  not_weighted_results.pkl  product_propensity_heatmap.xlsx  product_propensity_heatmap_v2.xlsx  umap_results.pkl  weighted_results.pkl
BusinessCase1/trash/: generate_plots.py
BusinessCase1/umap_cache/: emb_Gower_umap_12d.pkl  emb_Gower_umap_15d.pkl  emb_Gower_umap_8d.pkl  emb_L1_Tanimoto_umap_12d.pkl  emb_L1_Tanimoto_umap_15d.pkl  emb_L1_Tanimoto_umap_8d.pkl  emb_Mixed_Canberra_Hamming_umap_12d.pkl  emb_Mixed_Canberra_Hamming_umap_15d.pkl  emb_Mixed_Canberra_Hamming_umap_8d.pkl  (+6 more)
BusinessCase2/: .gitignore  AT_comments.md  EDA.ipynb  EstimatingNeedsPoliMI.ipynb  README.md  RECSYS_PLAN.md  bestmodel_accumulation.ipynb  bestmodel_income.ipynb  bias_analysis_accumulation.ipynb  data_assumptions.ipynb  eda_comment.md  file_sanity.ipynb  lifecycle_trajectory.ipynb  pyproject.toml  rec_sys.ipynb  rec_sys_svd_autoencoder.ipynb  recommendation_system.ipynb  report_svd_autoencoder.md  svd.ipynb  test.ipynb
BusinessCase3/: Dataset3_PortfolioReplicaStrategy.xlsx  Portfolio_ReplicaPoliMIv2.ipynb  README.md  StatisticalModels.ipynb  pyproject.toml
(+109 files in other folders)
