[project]
name = "businesscase2"
version = "0.1.0"
description = "Investment needs estimation — modular ML pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "seaborn>=0.13",
    "shap>=0.45",
    "statsmodels>=0.14",
    "tabulate>=0.9",
    "torch>=2.2",
    "xlrd>=2.0",
    "xgboost>=2.0",
    "jupyter>=1.1.1",
]
